2005-06-09  Andreas Kupries <andreask@activestate.com>

	* Makefile.in:  Upgraded build system to TEA 3.2.
	* configure.in:
	* config.guess:
	* config.sub
	* exp_main_sub.c:
	* aclocal.m4:

2005-03-29  Andreas Kupries <andreask@activestate.com>

	* exp_chan.c: Fixed problem with debugger introduced at '2004-06-14'.
	* tcldbg.h:   For a nonblocking stdin the debugger blowed up on the
	* Dbg.c:      empty reads it could get, exiting the application. I
	              guess that this was an implicit 'panic'. Fix:

		      - Split ExpBlockmodeProc into high- and lowlevel
		        code, the latter for use by the debugger. The
		        high-level code tells the debugger which state
		        stdin is in (doing this explicitly because if
		        FIONBIO is used it is not possible to query the fd
		        directly, and I saw no reason to #ifdef for fcntl
		        which can).

		      - Debugger now exports a function for use by the
		        blockmode proc, and in each interaction it checks
		        for nonblocking input, forces blocking if
		        necessary. At the end of each interaction the true
		        mode is restored. Both operations use the
		        low-level blockmode code.

2005-03-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* exp_tty.c (Exp_SttyCmd): fix from Libes that controlling
	terminal check example (book p372) by restricting set of
	exp_ioctled_devtty variable.

2005-02-15  Andreas Kupries <andreask@activestate.com>

	* Merged changes from the official versions 5.42.1 and 5.43.0 of
	  expect into the SF sources. See the details below.

	  --------------------
	  Martin Forssen <maf@tkrat.xorg> fixed bug in ExpOutputProc
	  that caused misbehavior during partial writes.

	  Someone noted that gets stdin behaves differently (returns -1
	  immediately) from tclsh because with 5.42, stdin is unblocked by
	  defaults.

	  Robroy Gregg <robroy@armory.xcom> noted that expect_background
	  ignores timeouts.  Added to documentation.
